--- a/jade/index.html
+++ b/jade/index.html
@@ -14,7 +14,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
       body {
-        font-family: "Press Start 2P", system-ui;
+        font-family: sans-serif;
         font-weight: 400;
         font-style: normal;
         font-size: 14px;
