--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <div class="text-container">
       <p>
-        Add some text about your graph & connect your graph with the graph below
+        The line chart above paints a picture of how gaming preferences have evolved over the past four decades. We see genres like Adventure and RPG capturing players' imaginations with deep narratives and expansive worlds, while the revival of Platform games points to a love for classic gameplay. These trends reveal a dynamic industry that continues to adapt to changing tastes and technological advancements. But the story doesn't end here. While this chart shows us the overall popularity of genres, the next question is: How do these trends differ across regions? As we explore the Popularity Trends of Game Genres by Region below, we can uncover how cultural factors influence gaming preferences in places like North America, Europe, and Japan. Are certain genres more beloved in one region than another? Let's dive in and find out.
       </p>
     </div>
     <div id="viz2" class="viz">
