--- a/sasha/index.html
+++ b/sasha/index.html
@@ -89,6 +89,11 @@
 
 
             // making the legend
+
+            // The code below is modified from the following link: https://d3-graph-gallery.com/graph/custom_legend.html
+            // I'm not trying to claim that this particular kind of legend is all my own hard work. That's why it uses
+            // the old style of data join. I just think it looks neat.
+            
             var keys = ["North America", "European Union", "Japan", "Other", "Worldwide"];
 
             chartArea.selectAll("circles")
@@ -100,8 +105,8 @@
                 .attr("r", 7)
                 .style("fill", function(d) {
                         if (d==="North America") return "#fe797b";
-                        if (d==="European Union") return "#ffb750";
-                        if (d==="Japan") return "#ffea56";
+                        if (d==="European Union") return "#5574ff";
+                        if (d==="Japan") return "#61e38c";
                         if (d==="Other") return "#8fe968";
                         if (d==="Worldwide") return "#36cedc";})
 
