--- a/menghan/index.html
+++ b/menghan/index.html
@@ -8,7 +8,8 @@
         <p>
             <svg id="p1" height="500" width="800" style="margin-top:50px" ></svg>
             <script>
-                d3.csv('games_detail.csv').then((data)=>{
+                d3.csv('games_detail.csv', d3.autoType)
+                    .then((data)=>{
                     let genreMap = {};
                     data.forEach(function(row) {
                         let genres = row.Genres
