--- a/index.html
+++ b/index.html
@@ -199,12 +199,25 @@
             .attr("transform", `translate(0,${height})`)
             .call(d3.axisBottom(x).tickFormat(d3.format("d")));
 
+          svg.append("text")
+            .attr("text-anchor", "middle")
+            .attr("x", width / 2)
+            .attr("y", height + margin.bottom - 10)
+            .text("Year");
+
           const y = d3
             .scaleLinear()
             .domain([0, d3.max(filteredData, (d) => d.Count)])
             .range([height, 0]);
 
           svg.append("g").call(d3.axisLeft(y));
+
+          svg.append("text")
+            .attr("text-anchor", "middle")
+            .attr("transform", "rotate(-90)")
+            .attr("x", -height / 2)
+            .attr("y", -margin.left + 20)
+            .text("Number of Games");
 
           const line = d3
             .line()
