edited menghan's genre label

--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
           svg
             .append("text")
             .attr("class", "axis-label")
-            .attr("x", width / 2 - 70)
-            .attr("y", height - margins.bottom / 2)
+            .attr("x", width / 2 - 90)
+            .attr("y", height - margins.bottom / 2 + 10)
             .attr("text-anchor", "middle")
             .text("Genres");
 
