final project wrapup

--- a/project_2/menghan/index.html
+++ b/project_2/menghan/index.html
@@ -69,6 +69,7 @@
 </head>
 <body>
     <h1>Interactive Restaurant Map - NYC</h1>
+    <a href="default.asp">Click to view the food inspection ratings of different NYC restaurants.</a>
 
     <!-- Filter dropdown menus -->
     <div class="filter">
